Added the call to putScreenFromFlash().

--- a/src/firmware-tests/Makefile
+++ b/src/firmware-tests/Makefile
@@ -12,6 +12,8 @@ export TEST_FIXTURE_OBJ_FILES=\
 export ASSERT_NO_ISR_OBJ_FILE=$(FIRMWARE_TESTS_DIR)/AssertNoIsr.o
 export DUMMY_ISR_OBJ_FILE=$(FIRMWARE_TESTS_DIR)/IsrDummy.o
 
+export PLATFORM_DIR=$(FIRMWARE_DIR)/Platform
+
 ASARGS+=-I $(FIRMWARE_TESTS_DIR)
 
 TEST_DOUBLE_OBJ_FILES=\
