--- a/src/firmware-tests/Ui/Makefile
+++ b/src/firmware-tests/Ui/Makefile
@@ -3,7 +3,8 @@ export OBJ_FILES=\
 	$(SUT_OBJ_FILE) \
 	$(FIRMWARE_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
-	$(ASSERT_NO_ISR_OBJ_FILE)
+	$(ASSERT_NO_ISR_OBJ_FILE) \
+	$(PLATFORM_DIR)/Flash.o
 
 TEST_DOUBLE_OBJ_FILES=\
 	InitialiseAfterUiMock.o \
