Added the {set,clear}LcdBacklightFlag() functions.

--- a/src/firmware-tests/Platform/Lcd/BlinkingCursor/Makefile
+++ b/src/firmware-tests/Platform/Lcd/BlinkingCursor/Makefile
@@ -9,7 +9,7 @@ TEST_DOUBLE_OBJ_FILES=\
 	../InitialiseAfterLcdDummy.o \
 	../PollAfterLcdDummy.o \
 	../AdcDummies.o \
-	../ShiftRegisterDummies.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/ShiftRegisterDummies.o \
 	../../Motor/MotorDummies.o
 
 ENABLE_BLINKING_CURSOR_OBJ_FILES=\
