--- a/src/firmware-tests/Platform/Lcd/Initialisation/Makefile
+++ b/src/firmware-tests/Platform/Lcd/Initialisation/Makefile
@@ -16,39 +16,39 @@ OBJ_FILES+=\
 INITIALISATION_CHAIN_OBJ_FILES=\
 	InitialisationChainTest.o \
 	../InitialiseAfterLcdMock.o \
-	../InitialiseShiftRegisterMock.o \
-	../EnableDisableShiftRegisterMocks.o \
-	../ShiftOutMock.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/InitialiseShiftRegisterMock.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/EnableDisableShiftRegisterMocks.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/ShiftOutMock.o \
 	../../Motor/MotorDummies.o
 
 INITIAL_STATE_OBJ_FILES=\
 	InitialStateTest.o \
 	../InitialiseAfterLcdDummy.o \
-	../ShiftRegisterDummies.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/ShiftRegisterDummies.o \
 	../../Motor/MotorDummies.o
 
 PORTA_OBJ_FILES=\
 	PortaTest.o \
 	../InitialiseAfterLcdDummy.o \
-	../ShiftRegisterDummies.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/ShiftRegisterDummies.o \
 	../../Motor/MotorDummies.o
 
 ANSEL_OBJ_FILES=\
 	AnselTest.o \
 	../InitialiseAfterLcdDummy.o \
-	../ShiftRegisterDummies.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/ShiftRegisterDummies.o \
 	../../Motor/MotorDummies.o
 
 LCD_FLAGS_ARE_ALL_CLEARED_OBJ_FILES=\
 	LcdFlagsAreAllClearedTest.o \
 	../InitialiseAfterLcdDummy.o \
-	../ShiftRegisterDummies.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/ShiftRegisterDummies.o \
 	../../Motor/MotorDummies.o
 
 LCD_CONTRAST_IS_DEFAULTED_OBJ_FILES=\
 	LcdContrastIsDefaultedTest.o \
 	../InitialiseAfterLcdDummy.o \
-	../ShiftRegisterDummies.o \
+	$(PLATFORM_TESTS_DIR)/ShiftRegister/ShiftRegisterDummies.o \
 	../../Motor/MotorDummies.o
 
 all: $(HEX_FILES)
