Added the button-press UI states.

--- a/src/firmware-tests/Ui/States/Makefile
+++ b/src/firmware-tests/Ui/States/Makefile
@@ -5,10 +5,12 @@ export OBJ_FILES+=\
 all:
 	$(MAKE) -C Boot all
 	$(MAKE) -C SettingsBacklightNow all
+	$(MAKE) -C WaitButtonPress all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Boot clean
 	$(MAKE) -C SettingsBacklightNow clean
+	$(MAKE) -C WaitButtonPress clean
 
 include $(MAKEFILE_RULES)
