Backlight toggling for the 'Backlight (Now)' screen.

--- a/src/firmware-tests/Ui/States/SettingsBacklightNow/Makefile
+++ b/src/firmware-tests/Ui/States/SettingsBacklightNow/Makefile
@@ -1,11 +1,10 @@
 HEX_FILES=\
 	NextPollInChainTest.hex \
-	NextStateWhenLcdIsNotIdleTest.hex \
-	NextStateWhenLcdIsIdleTest.hex \
+	NextStateWaitsForButtonPressTest.hex \
+	NextStateIsUnchangedTest.hex \
 	PutScreenWhenLcdIsNotIdleTest.hex \
 	PutScreenWhenLcdIsIdleTest.hex \
-	BacklightWhenLcdIsNotIdleTest.hex \
-	BacklightWhenLcdIsIdleTest.hex
+	BacklightTest.hex
 
 TEST_DOUBLES=\
 	LcdDummies.o \
@@ -20,15 +19,15 @@ NEXT_POLL_IN_CHAIN_OBJ_FILES=\
 	$(PLATFORM_TESTS_DIR)/Lcd/BacklightDummies.o \
 	$(TEST_DOUBLES)
 
-NEXT_STATE_WHEN_LCD_IS_NOT_IDLE_OBJ_FILES=\
-	NextStateWhenLcdIsNotIdleTest.o \
+NEXT_STATE_WAITS_FOR_BUTTON_PRESS_OBJ_FILES=\
+	NextStateWaitsForButtonPressTest.o \
 	../../PollAfterUiDummy.o \
 	$(PLATFORM_TESTS_DIR)/Lcd/PutScreenFromFlashDummy.o \
 	$(PLATFORM_TESTS_DIR)/Lcd/BacklightDummies.o \
 	$(TEST_DOUBLES)
 
-NEXT_STATE_WHEN_LCD_IS_IDLE_OBJ_FILES=\
-	NextStateWhenLcdIsIdleTest.o \
+NEXT_STATE_IS_UNCHANGED_OBJ_FILES=\
+	NextStateIsUnchangedTest.o \
 	../../PollAfterUiDummy.o \
 	$(PLATFORM_TESTS_DIR)/Lcd/PutScreenFromFlashDummy.o \
 	$(PLATFORM_TESTS_DIR)/Lcd/BacklightDummies.o \
@@ -48,15 +47,8 @@ PUT_SCREEN_WHEN_LCD_IS_IDLE_OBJ_FILES=\
 	$(PLATFORM_TESTS_DIR)/Lcd/BacklightDummies.o \
 	$(TEST_DOUBLES)
 
-BACKLIGHT_WHEN_LCD_IS_NOT_IDLE_OBJ_FILES=\
-	BacklightWhenLcdIsNotIdleTest.o \
-	../../PollAfterUiDummy.o \
-	$(PLATFORM_TESTS_DIR)/Lcd/PutScreenFromFlashDummy.o \
-	$(PLATFORM_TESTS_DIR)/Lcd/BacklightMocks.o \
-	$(TEST_DOUBLES)
-
-BACKLIGHT_WHEN_LCD_IS_IDLE_OBJ_FILES=\
-	BacklightWhenLcdIsIdleTest.o \
+BACKLIGHT_OBJ_FILES=\
+	BacklightTest.o \
 	../../PollAfterUiDummy.o \
 	$(PLATFORM_TESTS_DIR)/Lcd/PutScreenFromFlashDummy.o \
 	$(PLATFORM_TESTS_DIR)/Lcd/BacklightMocks.o \
@@ -70,11 +62,11 @@ clean:
 NextPollInChainTest.hex: $(OBJ_FILES) $(NEXT_POLL_IN_CHAIN_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(NEXT_POLL_IN_CHAIN_OBJ_FILES)
 
-NextStateWhenLcdIsNotIdleTest.hex: $(OBJ_FILES) $(NEXT_STATE_WHEN_LCD_IS_NOT_IDLE_OBJ_FILES)
-	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(NEXT_STATE_WHEN_LCD_IS_NOT_IDLE_OBJ_FILES)
+NextStateWaitsForButtonPressTest.hex: $(OBJ_FILES) $(NEXT_STATE_WAITS_FOR_BUTTON_PRESS_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(NEXT_STATE_WAITS_FOR_BUTTON_PRESS_OBJ_FILES)
 
-NextStateWhenLcdIsIdleTest.hex: $(OBJ_FILES) $(NEXT_STATE_WHEN_LCD_IS_IDLE_OBJ_FILES)
-	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(NEXT_STATE_WHEN_LCD_IS_IDLE_OBJ_FILES)
+NextStateIsUnchangedTest.hex: $(OBJ_FILES) $(NEXT_STATE_IS_UNCHANGED_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(NEXT_STATE_IS_UNCHANGED_OBJ_FILES)
 
 PutScreenWhenLcdIsNotIdleTest.hex: $(OBJ_FILES) $(PUT_SCREEN_WHEN_LCD_IS_NOT_IDLE_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(PUT_SCREEN_WHEN_LCD_IS_NOT_IDLE_OBJ_FILES)
@@ -82,10 +74,7 @@ PutScreenWhenLcdIsNotIdleTest.hex: $(OBJ_FILES) $(PUT_SCREEN_WHEN_LCD_IS_NOT_IDL
 PutScreenWhenLcdIsIdleTest.hex: $(OBJ_FILES) $(PUT_SCREEN_WHEN_LCD_IS_IDLE_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(PUT_SCREEN_WHEN_LCD_IS_IDLE_OBJ_FILES)
 
-BacklightWhenLcdIsNotIdleTest.hex: $(OBJ_FILES) $(BACKLIGHT_WHEN_LCD_IS_NOT_IDLE_OBJ_FILES)
-	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(BACKLIGHT_WHEN_LCD_IS_NOT_IDLE_OBJ_FILES)
-
-BacklightWhenLcdIsIdleTest.hex: $(OBJ_FILES) $(BACKLIGHT_WHEN_LCD_IS_IDLE_OBJ_FILES)
-	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(BACKLIGHT_WHEN_LCD_IS_IDLE_OBJ_FILES)
+BacklightTest.hex: $(OBJ_FILES) $(BACKLIGHT_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(BACKLIGHT_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
