Added the 'Backlight (Now)' button toggling.  The UI_STATE_OPTION_CHANGED states are largely untested as they're a lot of hassle.  It's easier to verify them manually, which any turn-on event with the hardware will do.

--- a/src/firmware-tests/Ui/States/Makefile
+++ b/src/firmware-tests/Ui/States/Makefile
@@ -2,15 +2,22 @@ export ASARGS+=-I $(FIRMWARE_DIR)/Ui
 export OBJ_FILES+=\
 	$(CURDIR)/../InitialiseAfterUiDummy.o
 
-all:
+TEST_FIXTURE_OBJ_FILES=\
+	NextStateIsUnchangedTestFixture.o \
+	NextStateIsOptionChangedTestFixture.o \
+	NextStateWaitsForButtonPressTestFixture.o
+
+all: $(TEST_FIXTURE_OBJ_FILES)
 	$(MAKE) -C Boot all
 	$(MAKE) -C SettingsBacklightNow all
 	$(MAKE) -C WaitButtonPress all
+	$(MAKE) -C Option all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Boot clean
 	$(MAKE) -C SettingsBacklightNow clean
 	$(MAKE) -C WaitButtonPress clean
+	$(MAKE) -C Option clean
 
 include $(MAKEFILE_RULES)
