Tweaked button press algorithm after testing with the hardware.  Removed some UI state tests - it will be more efficient to test the UI manually.  Started to add some more of the UI states / screens.

--- a/src/firmware/Ui/Makefile
+++ b/src/firmware/Ui/Makefile
@@ -6,6 +6,8 @@ OBJ_FILES=\
 	Screens.pp.o \
 	BootState.o \
 	SettingsBacklightNowStates.o \
+	SettingsBacklightInTheDarkStates.o \
+	SettingsDateTimeStates.o \
 	WaitButtonPressStates.o \
 	OptionStates.o
 
