Added the UI flow and screens.  Needs optimising somewhat to reduce the flash footprint (significantly).

--- a/src/Makefile.rules
+++ b/src/Makefile.rules
@@ -3,7 +3,7 @@
 
 %.pp.o: %.asm 
 	cat $< | sed "s/{{FIRMWARE_VER}}/$(FIRMWARE_VERSION)/g" > "`basename $< .asm`.pp.asm"
-	$(AS) $(ASARGS) -o $@ $<
+	$(AS) $(ASARGS) -o $@ "`basename $< .asm`.pp.asm"
 
 %.a: %
 	$(MAKE) -C $< all
