--- a/src/firmware-tests/Ui/Poll/Makefile
+++ b/src/firmware-tests/Ui/Poll/Makefile
@@ -7,7 +7,8 @@ POLL_CHAIN_OBJ_FILES=\
 	../PollAfterUiMock.o \
 	$(PLATFORM_TESTS_DIR)/PowerManagement/PowerManagementDummies.o \
 	$(PLATFORM_TESTS_DIR)/Lcd/LcdDummies.o \
-	$(PLATFORM_TESTS_DIR)/Buttons/ButtonsDummies.o
+	$(PLATFORM_TESTS_DIR)/Buttons/ButtonsDummies.o \
+	$(PLATFORM_TESTS_DIR)/Motor/MotorDummies.o
 
 all: $(HEX_FILES)
 
