--- a/src/firmware-tests/Ui/Initialisation/Makefile
+++ b/src/firmware-tests/Ui/Initialisation/Makefile
@@ -6,6 +6,7 @@ HEX_FILES=\
 
 TEST_DOUBLE_OBJ_FILES=\
 	../PollAfterUiDummy.o \
+	$(FIRMWARE_TESTS_DIR)/Door/DoorDummies.o \
 	$(PLATFORM_TESTS_DIR)/PowerManagement/PowerManagementDummies.o \
 	$(PLATFORM_TESTS_DIR)/Lcd/LcdDummies.o \
 	$(PLATFORM_TESTS_DIR)/Buttons/ButtonsDummies.o \
