--- a/src/firmware-tests/Ui/Poll/Makefile
+++ b/src/firmware-tests/Ui/Poll/Makefile
@@ -5,6 +5,7 @@ POLL_CHAIN_OBJ_FILES=\
 	PollChainTest.o \
 	../InitialiseAfterUiDummy.o \
 	../PollAfterUiMock.o \
+	$(FIRMWARE_TESTS_DIR)/Door/DoorDummies.o \
 	$(PLATFORM_TESTS_DIR)/PowerManagement/PowerManagementDummies.o \
 	$(PLATFORM_TESTS_DIR)/Lcd/LcdDummies.o \
 	$(PLATFORM_TESTS_DIR)/Buttons/ButtonsDummies.o \
