Sleep deprivation is now part of the UI boot, not a temporary call in the polling loop.

--- a/src/firmware/Ui/Makefile
+++ b/src/firmware/Ui/Makefile
@@ -4,6 +4,7 @@ OBJ_FILES=\
 	Initialise.o \
 	Poll.o \
 	BootState.o \
+	WaitLcdEnabledState.o \
 	SettingsBacklightNowStates.o \
 	SettingsBacklightInTheDarkStates.o \
 	SettingsDateTimeStates.o \
