Added pollTimer0() to the poll chain, along with a 'slowTmr0' which counts the TMR0 overflows-divided-by-8, resulting in a timebase that increments every 262.144ms with a 4MHz clock, overflowing at 67.108864 seconds.  This will plug the gap between the fast TMR0 (overflows at 32.768ms) and the Clock module that takes 16 seconds per tick.

--- a/src/firmware-tests/Platform/Lcd/Makefile
+++ b/src/firmware-tests/Platform/Lcd/Makefile
@@ -3,7 +3,8 @@ export OBJ_FILES=\
 	$(SUT_OBJ_FILE) \
 	$(PLATFORM_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
-	$(PLATFORM_DIR)/Timer0.o \
+	$(PLATFORM_DIR)/Timer0.a \
+	$(PLATFORM_TESTS_DIR)/Timer0/PollAfterTimer0Dummy.o \
 	$(PLATFORM_DIR)/Flash.o \
 	$(PLATFORM_DIR)/PowerManagement.a \
 	$(CURDIR)/../Adc/ChannelDummies.o
