--- a/src/firmware-tests/Platform/Timer0/Makefile
+++ b/src/firmware-tests/Platform/Timer0/Makefile
@@ -1,40 +1,43 @@
-HEX_FILES=\
-	InitialisationChainTest.hex \
-	InitialiseTimer0Test.hex \
-	ElapsedTicksTest.hex
-
-OBJ_FILES=\
-	$(PLATFORM_CORE_OBJ_FILES) \
+export SUT_OBJ_FILE=$(PLATFORM_DIR)/Timer0.a
+export OBJ_FILES=\
+	$(SUT_OBJ_FILE) \
+	$(FIRMWARE_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
-	$(ASSERT_NO_ISR_OBJ_FILE) \
-	InitialiseAfterTimer0Mock.o \
-	$(PLATFORM_DIR)/Timer0.o
+	$(ASSERT_NO_ISR_OBJ_FILE)
 
-INITIALISATION_CHAIN_OBJ_FILES=\
-	InitialisationChainTest.o
-
-INITIALISE_TIMER0_OBJ_FILES=\
-	InitialiseTimer0Test.o
-
-ELAPSED_TICKS_OBJ_FILES=\
-	ElapsedTicksTest.o
+HEX_FILES=\
+	ElapsedTicksTest.hex \
+	ElapsedSlowTicksTest.hex
 
 TEST_DOUBLE_OBJ_FILES=\
 	InitialiseAfterTimer0Dummy.o \
-	InitialiseAfterTimer0Mock.o
+	InitialiseAfterTimer0Mock.o \
+	PollAfterTimer0Mock.o \
+	PollAfterTimer0Dummy.o
+
+ELAPSED_TICKS_OBJ_FILES=\
+	ElapsedTicksTest.o \
+	InitialiseAfterTimer0Dummy.o \
+	PollAfterTimer0Dummy.o
+
+ELAPSED_SLOW_TICKS_OBJ_FILES=\
+	ElapsedSlowTicksTest.o \
+	InitialiseAfterTimer0Dummy.o \
+	PollAfterTimer0Dummy.o
 
 all: $(TEST_DOUBLE_OBJ_FILES) $(HEX_FILES)
+	$(MAKE) -C Initialisation all
+	$(MAKE) -C Poll all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
-
-InitialisationChainTest.hex: $(INITIALISATION_CHAIN_OBJ_FILES) $(OBJ_FILES)
-	$(LD) $(LDARGS) -o $@ $(INITIALISATION_CHAIN_OBJ_FILES) $(OBJ_FILES)
-
-InitialiseTimer0Test.hex: $(INITIALISE_TIMER0_OBJ_FILES) $(OBJ_FILES)
-	$(LD) $(LDARGS) -o $@ $(INITIALISE_TIMER0_OBJ_FILES) $(OBJ_FILES)
+	$(MAKE) -C Initialisation clean
+	$(MAKE) -C Poll clean
 
 ElapsedTicksTest.hex: $(ELAPSED_TICKS_OBJ_FILES) $(OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(ELAPSED_TICKS_OBJ_FILES) $(OBJ_FILES)
+
+ElapsedSlowTicksTest.hex: $(ELAPSED_SLOW_TICKS_OBJ_FILES) $(OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(ELAPSED_SLOW_TICKS_OBJ_FILES) $(OBJ_FILES)
 
 include $(MAKEFILE_RULES)
