--- a/src/firmware-tests/Platform/Buttons/Makefile
+++ b/src/firmware-tests/Platform/Buttons/Makefile
@@ -4,8 +4,9 @@ export OBJ_FILES=\
 	$(FIRMWARE_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
 	$(ASSERT_NO_ISR_OBJ_FILE) \
-	$(PLATFORM_DIR)/Timer0.o \
-	$(CURDIR)/../Timer0/InitialiseAfterTimer0Dummy.o
+	$(PLATFORM_DIR)/Timer0.a \
+	$(PLATFORM_TESTS_DIR)/Timer0/InitialiseAfterTimer0Dummy.o \
+	$(PLATFORM_TESTS_DIR)/Timer0/PollAfterTimer0Dummy.o
 
 TEST_DOUBLE_OBJ_FILES=\
 	InitialiseAfterButtonsMock.o \
