Added a button press timeout of 10 seconds to the non-settings screens of the UI.  Once the power management is handled correctly, this lack of hooman interaction will enable the device to drop into a low power state.

--- a/src/firmware-tests/Platform/Timer0/Makefile
+++ b/src/firmware-tests/Platform/Timer0/Makefile
@@ -13,7 +13,8 @@ TEST_DOUBLE_OBJ_FILES=\
 	InitialiseAfterTimer0Dummy.o \
 	InitialiseAfterTimer0Mock.o \
 	PollAfterTimer0Mock.o \
-	PollAfterTimer0Dummy.o
+	PollAfterTimer0Dummy.o \
+	Timer0Dummies.o
 
 ELAPSED_TICKS_OBJ_FILES=\
 	ElapsedTicksTest.o \
