Added PICKit 3 programming via MPLABX's IPE into the Makefile.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 /src/utilities/trigonometry/cordic/cordic-float
 /src/utilities/trigonometry/cordic/cordic-fixed
 /src/utilities/trigonometry/smoothstep/smoothstep
+/src/firmware/MPLABXLog.xml*
+/src/firmware/log.*
 /src/firmware-tests/RandomiseRam.sti
 /**/.~*
 /src/schematics/~*.sch
